Fix rocket overlay z-index's

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -41,11 +41,13 @@ a {
         size: cover;
     }
     height: 100vh;
+    z-index: -1;
 }
 
 .rocket-overlay{
     position: absolute;
     bottom: -3px;
+    z-index: 0;
 }
 
 .rocket-overlay img{
@@ -88,7 +90,7 @@ a {
     .zzt__logo {
         width: 60px;
         position: absolute;
-        bottom: 80px;
+        bottom: 70px;
         right: 10%;
     }
 
@@ -104,6 +106,8 @@ a {
 }
 
 .header-section--heading {
+    position: relative;
+    z-index: 1;
     h1 {
         width: 90%;
         color: white;
@@ -121,6 +125,8 @@ a {
 }
 
 .header-section--btn {
+    position: relative;
+    z-index: 1;
     margin-top: 50px;
     i {
         font-size: 16px;
